--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@mui/x-charts": "^8.21.0",
+    "axios": "^1.13.2",
+    "bootstrap": "^5.3.8",
+    "cloudinary": "^2.8.0",
+    "dotenv": "^17.2.3",
+    "mongoose": "^9.0.0",
+    "multer": "^2.0.2",
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "19.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
